--- a/apps/webswitcher/package.json
+++ b/apps/webswitcher/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "clean": "rimraf dist rimraf dist_scorm",
-    "production": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.production.config.js --progress --profile --colors && cross-env npm run copy_assets && cross-env npm run package",
+    "production": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.production.config.js --progress --profile --colors && cross-env npm run copy_assets && cross-env npm run package && cross-env npm run publish_app",
     "copy_assets": "cross-env mkdir -p dist/assets && cross-env cp -r app/assets dist/ && cross-env rm -rf dist/assets/scss",
     "package": "rimraf dist_zip && cross-env node tasks/package.js",
     "escapp": "cross-env node tasks/escapp.js",
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
     "precommit": "cross-env npm run lint && npm test",
-    "prepush": "cross-env npm run lint && npm test"
+    "prepush": "cross-env npm run lint && npm test",
+    "publish_app": "cp -r dist ../../docs/webswitcher"
   },
   "jest": {
     "setupFiles": [
