--- a/apps/bloc/package.json
+++ b/apps/bloc/package.json
@@ -18,7 +18,7 @@
     "coverage": "jest --coverage",
     "precommit": "cross-env npm run lint && npm test",
     "prepush": "cross-env npm run lint && npm test",
-    "publish_app": "cp -r dist ../../docs/bloc"
+    "publish_app": "rm -rf ../../docs/bloc && cp -r dist ../../docs/bloc"
   },
   "jest": {
     "setupFiles": [
