--- a/apps/safebox/package.json
+++ b/apps/safebox/package.json
@@ -18,7 +18,7 @@
     "coverage": "jest --coverage",
     "precommit": "cross-env npm run lint && npm test",
     "prepush": "cross-env npm run lint && npm test",
-    "publish_app": "cp -r dist ../../docs/safebox"
+    "publish_app": "rm -rf ../../docs/safebox && cp -r dist ../../docs/safebox"
   },
   "jest": {
     "setupFiles": [
