--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -18,7 +18,7 @@
     "coverage": "jest --coverage",
     "precommit": "cross-env npm run lint && npm test",
     "prepush": "cross-env npm run lint && npm test",
-    "publish_app": "cp -r dist ../../docs/template"
+    "publish_app": "rm -rf ../../docs/template && cp -r dist ../../docs/template"
   },
   "jest": {
     "setupFiles": [
