--- a/apps/keypad_office/package.json
+++ b/apps/keypad_office/package.json
@@ -18,7 +18,7 @@
     "coverage": "jest --coverage",
     "precommit": "cross-env npm run lint && npm test",
     "prepush": "cross-env npm run lint && npm test",
-    "publish_app": "rm -rf ../../docs/keypad && cp -r dist ../../docs/keypad"
+    "publish_app": "rm -rf ../../docs/keypad_office && cp -r dist ../../docs/keypad_office"
   },
   "jest": {
     "setupFiles": [
