--- a/apps/Fakemail/package.json
+++ b/apps/Fakemail/package.json
@@ -38,12 +38,13 @@
   "dependencies": {
     "cross-env": "5.1.0",
     "fs-extra": "^5.0.0",
-    "react": "16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.49.9",
     "zip-folder": "^1.0.0"
   },
   "devDependencies": {
@@ -68,7 +69,6 @@
     "husky": "0.15.0-beta.2",
     "jest": "21.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.1",
     "open-browser-webpack-plugin": "0.0.5",
     "react-hot-loader": "^4.12.15",
     "react-test-renderer": "16.0.0",
