--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -45,6 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint --fix --ext .js,.jsx,.es6 src",
     "tauri": "tauri",
     "crowdin": "crowdin"
   },
