--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -68,6 +68,9 @@
     ]
   },
   "devDependencies": {
-    "@tauri-apps/cli": "1.0.0-rc.2"
+    "@tauri-apps/cli": "1.0.0-rc.2",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react-hooks": "^4.5.0-next-af730436c-20220405"
   }
 }
