--- a/apps/safebox/package.json
+++ b/apps/safebox/package.json
@@ -38,11 +38,13 @@
     ]
   },
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "cross-env": "5.1.0",
     "es6-promise": "^4.2.8",
     "fs-extra": "^5.0.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "16.10.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.10.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^5.1.2",
