--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -20,6 +20,7 @@
     "@widgetbot/react-embed": "^1.4.0",
     "axios": "^0.21.1",
     "container-query-polyfill": "^0.1.2",
+    "cross-env": "^7.0.3",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
@@ -47,6 +48,7 @@
     "production": "npm run build && rm -rf ../../docs/desktop && cp -r build ../../docs/desktop",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "escapp": "cross-env node tasks/escapp.js",
     "lint": "eslint --fix --ext .js,.jsx,.es6 src",
     "tauri": "tauri",
     "crowdin": "crowdin"
