--- a/apps/video/package.json
+++ b/apps/video/package.json
@@ -44,6 +44,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "16.10.2",
     "react-dom": "^16.10.2",
+    "react-player": "^2.10.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
